2005-02-04  Not Zed  <NotZed@Ximian.com>

	* em-subscribe-editor.c (sub_folderinfo_get): reverted jeff's
	patch for the subscribed hint.

	** See bug #65329

	* em-folder-properties.c (emfp_dialog_got_folder): translate
	local-store special folders.

	* mail-session.c (alert_user, do_user_message): if we aren't
	waiting for cancel, then don't worry about waiting on the reply
	port, otherwise we could block when we don't need to, if there is
	another window already up.

2005-02-03  Jeffrey Stedfast  <fejj@novell.com>

	* message-list.c (message_list_set_folder): Use
	g_hash_table_foreach_remove() instead so the keys don't point to
	free'd values.
	(normalised_free): Return TRUE.

2005-02-02  Rodney Dawes  <dobey@novell.com>

	* em-subscribe-editor.c (em_subscribe_editor_new): Use the
	gtk_widget_ensure_style method instead of gtk_widget_realize when
	setting the border widths of the dialog containers for HIG compliance

	Fixes #68743

2005-02-02  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #70454

	* em-subscribe-editor.c (sub_folderinfo_get): Request subscription
	info (new flag).
	(sub_fill_level): Fixed the FIXME here (imap4 now implements
	CAMEL_FOLDER_SUBSCRIBED flag properly).

2005-02-01  Rodney Dawes  <dobey@novell.com>

	* em-folder-browser.c: Replace "_Virtual Folder" with "_vFolder" for
	the search menu to create a vfolder from a search

	* em-folder-tree-model.c (sort_cb): s/VFolders/vFolders/ for sorting
	in the folder tree
	(em_folder_tree_model_load_state): s/VFolders/vFolders/ in a comment

	* em-folder-view.c: s/VFolder/vFolder/ for the popup menu

	* em-vfolder-editor.c (em_vfolder_editor_new): Replace the string
	"Virtual _Folders" with "v_Folders" for the label

	* em-vfolder-rule.c (em_vfolder_editor_sourcelist_new): Repalce the
	string "VFolder source" with "vFolder source"

	* mail-errors.xml:
	* mail-errors.xml.h: Replace "virtual folder" with "vFolder" in an
	error string

	* mail-vfolder.c (vfolder_setup_desc): s/vfolder/vFolder/